Refactored into initial functional module.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,9 @@
         "removeComments": true,
         "downlevelIteration": true,
         "alwaysStrict": true,
-        "allowJs": true,
         "allowSyntheticDefaultImports": true,
-        "allowUnreachableCode": true
+        "allowUnreachableCode": true,
+		"declaration": true
     },
     "include":
     [
