--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
 		"webpack": "^4.16.2",
 		"webpack-cli": "^3.1.0",
 		"webpack-node-externals": "^1.7.2"
+	},
+	"scripts": {
+		"build": ".\\node_modules\\.bin\\webpack"
 	}
 }
