--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "@bluecewe/empty-promise",
 	"description": "Generates a promise which can be externally controlled.",
 	"version": "0.1.0",
+	"license": "UNLICENSED",
 	"main": "index.js",
 	"private": true,
 	"devDependencies": {
