--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
 	"description": "Generates a promise which can be externally controlled.",
 	"version": "0.1.1",
 	"devDependencies": {
-		"ts-loader": "^4.4.2",
-		"typescript": "^2.9.2",
-		"webpack": "^4.16.2",
-		"webpack-cli": "^3.1.0",
-		"webpack-node-externals": "^1.7.2"
+		"ts-loader": "6.2.0",
+		"typescript": "3.6.4",
+		"webpack": "4.41.1",
+		"webpack-cli": "3.3.9",
+		"webpack-node-externals": "1.7.2"
 	},
 	"scripts": {
 		"build": "./node_modules/.bin/webpack"
